--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/3ffa930601.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="shecodes/styles.css" />
     <title>Weather App</title>
   </head>
 
