--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
       </div>
       
     </div>
-    <script src="src/index.js"></script>
+    <script src="shecodes/index.js"></script>
   </body>
 </html>
